crates/liminal-server/tests/trybuild/validated_marker_record_cannot_clone.stderr
error[E0599]: no method named `clone` found for struct `lifecycle::claim_frontier::ValidatedMarkerRecord` in the current scope
 --> tests/trybuild/validated_marker_record_cannot_clone.rs:5:21
  |
5 |         drop(record.clone());
  |                     ^^^^^ method not found in `lifecycle::claim_frontier::ValidatedMarkerRecord`
